                              Apache Solr Release Notes

This file lists Solr's raw release notes with details of every change to Solr.
Most people will find the solr-upgrade-notes.adoc file more approachable.
https://github.com/apache/solr/blob/main/solr/solr-ref-guide/modules/upgrade-notes/pages/solr-upgrade-notes.adoc


==================  9.3.0 ==================

New Features
---------------------
* SOLR-16697: Solr now provides an "Install Shard"  API that allows users who have built (per-shard) indices offline to import
  them into SolrCloud shards.  The API is available at `POST /api/collections/collName/shards/shardName/install`
  (v2), or at `GET /solr/admin/collections?action=INSTALLSHARDDATA` (v1). (Jason Gerlowski)

* SOLR-16742: Produce a slim Solr binary and docker image, without the Prometheus Exporter and Solr Modules. (Houston Putman)

* SOLR-16674: Introduced support for byte vector encoding in DenseVectorField and KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16719: AffinityPlacementFactory now supports spreading replicas across domains within the availability zone and
  optionally fail the request if more than a configurable number of replicas need to be placed in a single domain. (Houston Putman, Tomás Fernández Löbbe)

* SOLR-16836: Introduced support for high dimensional vectors (Alessandro Benedetti).

* SOLR-16806: Solr now provides a BalanceReplicas API at `POST /api/cluster/replicas/balance` (v2), to spread replicas
  across a given set of nodes. No v1 API is available. (Houston Putman, Tomás Fernández Löbbe, Jason Gerlowski, Radu Gheorghe)

* SOLR-16827: Add min/max scaling to the reranker (Joel Bernstein)

* SOLR-16844: Added new parameter `backupConfigset` to collection Backup to optionally skip backing up configsets. (Tomás Fernández Löbbe)

Improvements
---------------------

* SOLR-16183: XML update allows <doc> <doc name="child"> ... </doc> </doc>.
  (Vinayak Hegde via Mikhail Khludnev)
